--- a/index.html
+++ b/index.html
@@ -1,33 +1,32 @@
 <!doctype html>
 <html>
+    <head>
+        <title>My Todo App</title>
+        <link rel="stylesheet" href="/css/style.css" />
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+            rel="stylesheet"
+        />
+    </head>
+    <body>
+        <div class="countner">
+            <header>
+                <img src="/img/icon.png" width="35px" />
+                <h2>My Todo App</h2>
+            </header>
 
-<head>
-    <title>My Todo App</title>
-    <link rel="stylesheet" href="/css/style.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-        rel="stylesheet" />
-</head>
+            <form>
+                <input id="input" type="text" placeholder="Write your TO-DO" />
+                <button id="addBtn">ADD</button>
+            </form>
 
-<body>
-    <div class="countner">
-        <header>
-            <img src="/img/icon.png" width="35px" />
-            <h2>My Todo App</h2>
-            hhhhh
-        </header>
+            <div id="list" class="list"></div>
+        </div>
+        hh
 
-        <form>
-            <input type="text" placeholder="Write your TO-DO" />
-            <button id="addBtn">ADD</button>
-        </form>
-        <div id="list" class="list"></div>
-    </div>
-
-    <!-- Include External JavaScript -->
-    <script type="module" src="/js/script.js"></script>
-</body>
-
+        <!-- Include External JavaScript -->
+        <script type="module" src="/js/script.js"></script>
+    </body>
 </html>
